--- a/DAY 1,25-5-2025.md
+++ b/DAY 1,25-5-2025.md
@@ -1188,4 +1188,321 @@ The browser then displays the structured content visually based on HTML + CSS.
  
 <p> element defines a paragraph
 
+### Day 10
+
+### 🌐 Introduction to HTML & Web Basics
+### ✅ What is HTML?
+HTML (HyperText Markup Language) is the standard language used to create web pages. It structures content using tags that the browser can interpret.
+
+### 🔖 Common HTML Tags
+1. Headings (<h1> to <h6>)
+Used to define titles and subheadings.
+<h1> is the largest, <h6> is the smallest. 
+
+ <h1>Main Title</h1>
+<h2>Subheading</h2>
+
+### 2. Paragraph (<p>)
+Represents a block of text.
+
+<p>This is a paragraph of text.</p>
+
+### 3. Lists
+🔸 Unordered List (<ul>) – Bullet Points
+<ul>
+  <li>Apple</li>
+  <li>Banana</li>
+</ul>
+
+###🔸 Ordered List (<ol>) – Numbered
+<ol>
+  <li>First Step</li>
+  <li>Second Step</li>
+</ol>
+
+###  4. Links (<a>)
+Used to create clickable hyperlinks.
+href attribute defines the URL.
+
+<a href="https://www.google.com">Visit Google</a>
+
+### 5. Images (<img>)
+Used to display images on a web page.
+src specifies the image path, alt gives alternative text.
+
+<img src="image.jpg" alt="Description of image">
+
+### Using above HTML tags
+
+### Day 11
+
+### 📘 1. Forms and Input Types in HTML
+### 🔹 What is a Form?
+An HTML form is used to collect user input and send it to a server for processing. It is defined using the <form> tag.
+
+<form action="/submit" method="post">
+  <!-- input elements go here -->
+</form>
+
+### HTML Form Method
+| Feature         | **GET**          | **POST**                          |
+| --------------- | ---------------- | --------------------------------- |
+| Data Visibility | In URL (visible) | Hidden (in request body)          |
+| Security        | Less secure      | More secure                       |
+| Data Limit      | Limited          | No size limit (depends on server) |
+| Use Case        | Search, filters  | Login, registration, payment      |
+
+### Comman input Types
+
+| Input Type | Purpose/Use                          | Example Code Snippet                                 |
+| ---------- | ------------------------------------ | ---------------------------------------------------- |
+| `text`     | Single-line plain text               | `<input type="text" name="name">`                    |
+| `password` | Hidden characters (for passwords)    | `<input type="password" name="pass">`                |
+| `email`    | Email input (validates format)       | `<input type="email" name="email">`                  |
+| `number`   | Only numeric values                  | `<input type="number" name="age">`                   |
+| `radio`    | Select one option from multiple      | `<input type="radio" name="gender" value="Male">`    |
+| `checkbox` | Select multiple options              | `<input type="checkbox" name="hobby" value="Music">` |
+| `submit`   | Submits the form                     | `<input type="submit" value="Submit">`               |
+| `reset`    | Resets all form fields               | `<input type="reset" value="Reset">`                 |
+| `button`   | Clickable button (custom JavaScript) | `<input type="button" value="Click Me">`             |
+| `file`     | Upload file                          | `<input type="file" name="resume">`                  |
+| `date`     | Select date from calendar            | `<input type="date" name="dob">`                     |
+| `tel`      | Phone number input                   | `<input type="tel" name="phone">`                    |
+| `url`      | Website URL input                    | `<input type="url" name="website">`                  |
+| `color`    | Select color picker                  | `<input type="color" name="favcolor">`               |
+| `range`    | Select value from slider             | `<input type="range" min="0" max="100">`             |
+| `hidden`   | Hidden data (not shown to user)      | `<input type="hidden" name="userID" value="123">`    |
+
+### Exam Html Form
+
+<form action="submit.php" method="post">
+  Name: <input type="text" name="name"><br>
+  Email: <input type="email" name="email"><br>
+  Gender: 
+    <input type="radio" name="gender" value="Male"> Male
+    <input type="radio" name="gender" value="Female"> Female<br>
+  Hobbies:
+    <input type="checkbox" name="hobby" value="Reading"> Reading
+    <input type="checkbox" name="hobby" value="Music"> Music<br>
+  <input type="submit" value="Submit">
+</form>
+
+### 📘 2. Semantic HTML
+### 🔹 What is Semantic HTML?
+Semantic HTML refers to the use of HTML5 tags that clearly describe the purpose and meaning of the content. It helps in accessibility, SEO, and code readability.
+
+### Common Semantic HTML Tags
+| Semantic Tag   | Purpose / Use                                      | Example Usage                                     |
+| -------------- | -------------------------------------------------- | ------------------------------------------------- |
+| `<header>`     | Defines the header of a page or section            | Contains logo, nav bar, title                     |
+| `<nav>`        | Defines navigation links                           | Menu, navigation bar                              |
+| `<main>`       | Main content of the page (unique content)          | Holds primary page info                           |
+| `<section>`    | Represents a thematic group of content             | A product section, news section                   |
+| `<article>`    | Self-contained content that can be reused          | Blog post, news article, forum post               |
+| `<aside>`      | Sidebar or additional info related to main content | Ads, related links, tips                          |
+| `<footer>`     | Footer of a page or section                        | Contact info, copyright, social media             |
+| `<figure>`     | Contains media like images with caption            | Image and its description                         |
+| `<figcaption>` | Caption for content inside `<figure>`              | "This is an image of a burger"                    |
+| `<mark>`       | Highlights or marks text                           | `<mark>Important</mark>`                          |
+| `<time>`       | Represents a specific time/date                    | `<time datetime="2025-07-13">13 July 2025</time>` |
+| `<address>`    | Contact or author information                      | Address, email, phone                             |
+
+### Semantic HTML Example
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>My Semantic Web Page</title>
+</head>
+<body>
+
+    <header>
+        <h1>My Website</h1>
+        <nav>
+            <a href="#home">Home</a> |
+            <a href="#about">About</a> |
+            <a href="#contact">Contact</a>
+        </nav>
+    </header>
+
+    <main>
+        <section id="home">
+            <h2>Welcome to My Website</h2>
+            <p>This is a simple example of semantic HTML layout.</p>
+        </section>
+
+        <section id="about">
+            <h2>About Me</h2>
+            <article>
+                <h3>My Journey</h3>
+                <p>I started learning HTML to build my own websites.</p>
+            </article>
+        </section>
+
+        <aside>
+            <h3>Quick Links</h3>
+            <ul>
+                <li><a href="#">GitHub</a></li>
+                <li><a href="#">Blog</a></li>
+            </ul>
+        </aside>
+    </main>
+
+    <footer>
+        <p>© 2025 MyWebsite. All rights reserved.</p>
+        <address>Contact: myemail@example.com</address>
+    </footer>
+
+</body>
+</html>
+
+### DAy 12
+
+### 📘 3. CSS Styling: Inline, Internal & External
+###  🔹 What is CSS?
+CSS (Cascading Style Sheets) is used to style HTML elements. It controls layout, color, fonts, spacing, and more.
+
+### There are three ways to apply CSS:
+
+### ✅ Inline CSS
+Applied directly to an HTML element using the style attribute.
+Best for quick, one-time styling.
+<p style="color: green; font-size: 18px;">This is styled text.</p>
+
+### ✅ Internal CSS
+Defined inside a <style> tag within the <head> of an HTML file.
+Useful for styling a single web page.
+
+<head>
+  <style>
+    body {
+      background-color: #f0fff0;
+      font-family: Arial;
+    }
+    h1 {
+      color: darkgreen;
+    }
+  </style>
+</head>
+
+### ✅ External CSS
+Written in a separate .css file.
+
+Linked to the HTML file using the <link> tag.
+
+Recommended for styling multiple pages consistently.
+### HTML File:
+
+<head>
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+### styles.css File:
+body {
+  background-color: #e6ffe6;
+  font-family: Verdana;
+}
+h1 {
+  color: seagreen;
+  text-align: center;
+}
+
+### 🔹 Comparison Table
+Feature	Inline CSS	Internal CSS	External CSS
+
+| **Feature**         | **Inline CSS**                                | **Internal CSS**                             | **External CSS**                        |
+| ------------------- | --------------------------------------------- | -------------------------------------------- | --------------------------------------- |
+| **Location**        | Inside an HTML tag (within `style` attribute) | Inside `<style>` tag in the `<head>` section | In a separate `.css` file               |
+| **Syntax**          | `<p style="color:red;">Hello</p>`             | `<style> p { color: red; } </style>`         | `p { color: red; }` (in `style.css`)    |
+| **Reusability**     | ❌ Not reusable                                | ⚠️ Limited to single HTML file               | ✅ Highly reusable across multiple pages |
+| **Maintainability** | ❌ Hard to maintain                            | ⚠️ Moderate                                  | ✅ Easy to update and maintain           |
+| **Priority**        | ✅ Highest                                     | Medium                                       | Lowest                                  |
+| **Performance**     | ❌ Slower for large sites                      | ⚠️ Okay for small sites                      | ✅ Better for large websites             |
+| **Use Case**        | Quick styling for single element              | Single-page websites or testing              |                                         |
+
+### Day 13
+### 📘 Module 4: Introduction to Git and Version Control
+🔶 What is Git and Why Use Version Control?
+### 🔹 What is Git?
+Git is a distributed version control system (VCS) used to track changes in source code and collaborate on software projects. It helps developers work together efficiently, even on large and complex projects.
+
+### 🔹 What is Version Control?
+Version control is a system that records changes to a file or set of files over time, so you can recall specific versions later.
+
+### ✅ Benefits of Using Git & Version Control:
+Keep history of all changes.
+
+Collaborate with teams efficiently.
+
+Rollback to previous versions if something breaks.
+
+Work on multiple features simultaneously (branches).
+
+Avoid overwriting each other's work.
+
+### 🔶 Git Architecture: Repository, Working Tree, Index
+Git uses a three-layer architecture:
+
+| **Layer**                   | **Description**                                                                     | **Command Examples**       |
+| --------------------------- | ----------------------------------------------------------------------------------- | -------------------------- |
+| **1. Working Directory**    | This is the folder you are actively working in — contains the actual files.         | `git status`, modify files |
+| **2. Staging Area (Index)** | A place where you prepare (stage) changes before committing them to the repository. | `git add file.txt`         |
+| **3. Repository (.git)**    | The local Git database where all committed changes are permanently stored.          | `git commit -m "message"`  |
+
+
+### 🔁 Git Workflow Diagram:
+
+Working Tree → Index (Staging) → Local Repository
+
+### 🔶 Core Git Operations
+
+### 1️⃣ git init
+
+Initializes a new Git repository.
+
+Creates a hidden .git folder to track versions.
+
+git init
+
+### 2️⃣ git add
+
+Adds files to the staging area (index).
+Prepares files for commit.
+
+git add filename      # Add single file
+git add .             # Add all changes in the directory
+
+### 3️⃣ git commit
+Saves changes from the staging area to the repository.
+Requires a message describing the change.
+
+git commit -m "Your commit message"
+
+### 4️⃣ git status
+Shows the current state of working directory and staging area.
+Helps identify what is staged, unstaged, or untracked.
+
+git status
+
+### 5️⃣ git log
+Displays the commit history.
+Shows commit ID, author, date, and message.
+
+git log
+
+### 📝 Summary
+Command	Purpose
+git init	Create a new Git repo
+
+git add	Add changes to staging area
+
+git commit	Save staged changes to repository
+
+git status	Check status of changes and staged files
+
+git log	View commit history
+
+
+
 
