--- a/DAY 1,25-5-2025.md
+++ b/DAY 1,25-5-2025.md
@@ -1492,17 +1492,12 @@ Shows commit ID, author, date, and message.
 git log
 
 ### 📝 Summary
-Command	Purpose
-git init	Create a new Git repo
-
-git add	Add changes to staging area
-
-git commit	Save staged changes to repository
-
-git status	Check status of changes and staged files
-
-git log	View commit history
-
+git init                  # Start a repository
+git clone <url>           # Get a remote project
+git add <file>            # Stage changes
+git commit -m "msg"       # Save to local repo
+git push                  # Send to remote repo
+git pull                  # Get latest changes
 
 
 
