--- a/DAY 1,25-5-2025.md
+++ b/DAY 1,25-5-2025.md
@@ -1224,13 +1224,13 @@ Represents a block of text.
 Used to create clickable hyperlinks.
 href attribute defines the URL.
 
-<a href="https://www.google.com">Visit Google</a>
-
+<a<href="https://www.google.com">Visit Google</a>
 ### 5. Images (<img>)
 Used to display images on a web page.
+
 src specifies the image path, alt gives alternative text.
 
-<img src="image.jpg" alt="Description of image">
+<img > src="image.jpg" alt="Description of image">
 
 ### Using above HTML tags
 
@@ -1493,10 +1493,15 @@ git log
 
 ### 📝 Summary
 git init                  # Start a repository
+
 git clone <url>           # Get a remote project
+
 git add <file>            # Stage changes
+
 git commit -m "msg"       # Save to local repo
+
 git push                  # Send to remote repo
+
 git pull                  # Get latest changes
 
 
