--- a/DAY 1,25-5-2025.md
+++ b/DAY 1,25-5-2025.md
@@ -902,7 +902,7 @@ Stick the connector into the crimping part of the tool and squeeze twice.
 
 Remove the cable from the tool and check that all of the pins are down & test the cable.
 
-![alt rj45](rj45.jpg)
+![alt rj45](rj45.png)
 
 ### Day - 7
 ### Networking Basics
@@ -914,7 +914,7 @@ Host: Host is any device which sends or receive data traffic over a network. Whi
 Client: Client is a host that initiates requests for services from another device on the network.
 
 Server: Server is a computer designed to respond to requests from clients. It "serves" the requested data or services to the user.
-
+![alt host](host.png)
 Traffic: It refers to the data that is transmitted between devices on a network. This can include anything from web pages and emails to video streams and sensor data from IoT devices.
 image
 
@@ -938,6 +938,7 @@ Dynamic Nature: IP address can change over time, especially for devices on dynam
 IPv4 is the fourth version of the Internet Protocol.
 
 Length: 32 bits long.
+
 Address Space: Can theoretically support 2^32 unique addresses.
 
 Notation: Represented in dotted-decimal format, consisting of four octets (groups of 8 bits) separated by dots. Each octet can range from 0 to 255.
@@ -949,8 +950,7 @@ Network ID (Prefix): Defines the network segment to which the device belongs. Th
 Host ID (Suffix): Uniquely identifies a specific device (host) within that network segment.
 
 Example: An international phone number where the country code represent network and the phone number represents the "host."
-
-
+![alt byte](byte.png)
 
 ### 4. IPv6 (Internet Protocol Version 6)
 IPv6 is the latest version of the Internet Protocol, designed to address the limitations of IPv4, primarily the exhaustion of available addresses.
@@ -1088,8 +1088,12 @@ Otherwise, its blocked.
 ### Syntax: ping website_address
 
 Example: ping google.com
+![alt ping1](ping1.png)
+
+![alt ping2](ping2.png)
 
 To Exit: Press Ctrl + C in the command prompt/terminal.
+![alt ping](ping.png)
 
 ### Loopback Address (127.0.0.1):
 
@@ -1099,7 +1103,6 @@ It's used to test the network configuration of your local PC.
 
 Example: Like sending a letter to your own house to test if your mailbox works.
 
-
 ### traceroute (Windows: tracert)
 It shows the exact path your data takes from your computer to a website or server, revealing every "hop" (router) along the way. Each hop represents a router that the data packet passes through.
 
@@ -1107,11 +1110,14 @@ Syntax: traceroute <hostname_or_IP_address> (on macOS/Linux) or tracert <hostnam
 
 *** (Asterisks) in Output: It indicates that the router at that hop did not reply.
 ipconfig (Windows) / ifconfig (macOS/Linux)
-
 ### ipconfig (Windows):
 
+![alt tracert](tracert.png)
+
 Shows the IP address, subnet mask, default gateway, DNS servers, and other network settings that your Windows computer is currently using.
-### ifconfig (macOS/Linux):
+### ifconfig 
+(macOS/Linux):
+![alt traceroute](traceroute.png)
 
 Provides:
 |Term	|Represents|
@@ -1188,6 +1194,8 @@ The browser then displays the structured content visually based on HTML + CSS.
  
 <p> element defines a paragraph
 
+![alt htl](htl.png)
+
 ### Day 10
 
 ### 🌐 Introduction to HTML & Web Basics
@@ -1233,6 +1241,10 @@ src specifies the image path, alt gives alternative text.
 <img > src="image.jpg" alt="Description of image">
 
 ### Using above HTML tags
+
+![alt html](html.png)
+
+![alt htmll](htmll.png)
 
 ### Day 11
 
@@ -1442,6 +1454,9 @@ Work on multiple features simultaneously (branches).
 Avoid overwriting each other's work.
 
 ### 🔶 Git Architecture: Repository, Working Tree, Index
+
+![alt git](git.png)
+
 Git uses a three-layer architecture:
 
 | **Layer**                   | **Description**                                                                     | **Command Examples**       |
