--- a/DAY 1,25-5-2025.md
+++ b/DAY 1,25-5-2025.md
@@ -902,7 +902,7 @@ Stick the connector into the crimping part of the tool and squeeze twice.
 
 Remove the cable from the tool and check that all of the pins are down & test the cable.
 
-![alt rj45](rj45.png)
+![alt rj45](rj45.jpg)
 
 ### Day - 7
 ### Networking Basics
