--- a/DAY 1,25-5-2025.md
+++ b/DAY 1,25-5-2025.md
@@ -1,5 +1,5 @@
  ### Day - 1
-**First of all we discussed about different types of companies.
+**First of all we discussed about differents types of companies.
 ### Product based companies
 ### Serviced based companies
 .Then we learned about differences that are present in which like product based companies that have their own product but serviced based companies may or may not be have their own products but their primary business is service they works for other organization.
